<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_notifications"
        android:title="Notifications"
        android:icon="@drawable/ic_notifications" />
    <item
        android:id="@+id/nav_edit_profile"
        android:title="Edit Profile"
        android:icon="@drawable/ic_edit_profile" />
    <item
        android:id="@+id/action_scan_qr"
        android:icon="@drawable/baseline_qr_code_scanner_24"
        android:title="Scan QR Code"/>

    <item
        android:id="@+id/nav_create_event"
        android:title="Create an Event"
        android:icon="@drawable/ic_add_event" />

    <item
        android:id="@+id/nav_edit_facility"
        android:title="My Facility Profile"
        android:icon="@drawable/ic_facility" />

    <item
        android:id="@+id/nav_view_joined_events"
        android:title="My Joined Events"
        android:icon="@drawable/ic_facility" />

    <item
        android:id="@+id/nav_my_events"
        android:title="My Created Events"
        android:icon="@drawable/ic_event" />

    <item
        android:id="@+id/nav_manage_media"
        android:visible="false"
        android:title="Manage Media"
        android:icon="@android:drawable/ic_menu_gallery" />
    <item
        android:id="@+id/nav_manage_users"
        android:visible="false"
        android:title="Manage Users"
        android:icon="@drawable/ic_profile_placeholder" />

    <item
        android:id="@+id/nav_manage_events"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="Manage Events"
        android:visible="false" />

    <item
        android:id="@+id/nav_manage_facilities"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="Manage Facilities"
        android:visible="false" />


</menu>

<!-- todo: change color of manage media icon to black -->