...
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="8dp" />

                    <!-- Name Input -->
                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="Name"
                        app:layout_constraintTop_toBottomOf="@id/uploadPictureButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
...
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="8dp" />

                    <!-- Save Button -->
                    <Button
                        android:id="@+id/saveButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Save Changes"
                        app:layout_constraintTop_toBottomOf="@id/phoneEditText"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
...
